RESOLVED FIXED 243464
[iOS] Safari sometimes crashes with an NSInternalInconsistencyException after long pressing on an image
https://bugs.webkit.org/show_bug.cgi?id=243464
Summary [iOS] Safari sometimes crashes with an NSInternalInconsistencyException after...
Wenson Hsieh
Reported 2022-08-02 13:43:48 PDT
Attachments
Wenson Hsieh
Comment 1 2022-08-02 15:35:11 PDT
EWS
Comment 2 2022-08-03 08:00:54 PDT
Committed 253073@main (4d8b0ef1158f): <https://commits.webkit.org/253073@main> Reviewed commits have been landed. Closing PR #2967 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.