Cherry-pick 4d8b0ef1158f. rdar://problem/97436180

[iOS] Safari sometimes crashes with an NSInternalInconsistencyException after long pressing on an image
    https://bugs.webkit.org/show_bug.cgi?id=243464
    rdar://97436180

    Reviewed by Chris Dumez.

    After the changes in <commits.webkit.org/250218@main>, I started using `WTF::CallbackAggregator` to
    allow the context menu to present (or continue presenting) after all three of:

    - Visual Look Up analysis
    - Object lifting (for "Copy Subject")
    - Machine-readable-code analysis

    ...have completed. To achieve this, I created a `Ref<CallbackAggregator>` that wraps the overall
    `CompletionHandler`, and copied this `Ref` as a captured variable in each of the Objective-C blocks
    that are passed into the three asynchronous analysis methods. When the ref-count of this aggregator
    reaches 0, we then invoke the overall completion handler. However, there are corner cases in which
    VisionKitCore might:

    (1) ...never invoke the completion block we pass to it, and also
    (2) ...destroy the completion block we give it on a background thread

    In this scenario, the last reference to the `CallbackAggregator` may be removed on a background
    thread, which means we'll end up trying to present (or update) the context menu interaction from the
    background, thereby triggering this exception.

    To fix this, we instead create and deploy an alternate version of `CallbackAggregator` that hops to
    the main thread before calling the completion handler by subclassing `ThreadSafeRefCounted` with the
    `DestructionThread::MainRunLoop` template parameter, in the case where the destructor is invoked on
    the background.

    * Source/WTF/wtf/CallbackAggregator.h:
    (WTF::CallbackAggregatorOnThread::create):
    (WTF::CallbackAggregatorOnThread::~CallbackAggregatorOnThread):
    (WTF::CallbackAggregatorOnThread::CallbackAggregatorOnThread):
    (WTF::CallbackAggregator::create): Deleted.
    (WTF::CallbackAggregator::~CallbackAggregator): Deleted.
    (WTF::CallbackAggregator::CallbackAggregator): Deleted.

    Add support for `MainRunLoopCallbackAggregator`.

    * Source/WebKit/NetworkProcess/cache/CacheStorageEngine.h:
    * Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
    (WebKit::WebsiteDataStore::removeData):

    Replace the existing `RemovalCallbackAggregator` with `MainRunLoopCallbackAggregator` here as well.

    (WebKit::RemovalCallbackAggregator::create): Deleted.
    (WebKit::RemovalCallbackAggregator::~RemovalCallbackAggregator): Deleted.
    (WebKit::RemovalCallbackAggregator::RemovalCallbackAggregator): Deleted.
    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView _completeImageAnalysisRequestForContextMenu:requestIdentifier:hasTextResults:]):
    (-[WKContentView imageAnalysisGestureDidTimeOut:]):

    Deploy `MainRunLoopCallbackAggregator` in image analysis code, to ensure that the completion handler
    is invoked on the main runloop.

    * Source/WebKit/WebProcess/WebCoreSupport/WebBroadcastChannelRegistry.h:

    Canonical link: https://commits.webkit.org/253073@main

Canonical link: https://commits.webkit.org/252432.278@safari-7614-branch