Source/WTF/wtf/CallbackAggregator.h
@@ -32,11 +32,12 @@
 
 namespace WTF {
 
-class CallbackAggregator : public ThreadSafeRefCounted<CallbackAggregator> {
+template <DestructionThread destructionThread>
+class CallbackAggregatorOnThread : public ThreadSafeRefCounted<CallbackAggregatorOnThread<destructionThread>, destructionThread> {
 public:
-    static Ref<CallbackAggregator> create(CompletionHandler<void()>&& callback) { return adoptRef(*new CallbackAggregator(WTFMove(callback))); }
+    static auto create(CompletionHandler<void()>&& callback) { return adoptRef(*new CallbackAggregatorOnThread(WTFMove(callback))); }
 
-    ~CallbackAggregator()
+    ~CallbackAggregatorOnThread()
     {
         ASSERT(m_wasConstructedOnMainThread == isMainThread());
         if (m_callback)
@@ -44,7 +45,7 @@ public:
     }
 
 private:
-    explicit CallbackAggregator(CompletionHandler<void()>&& callback)
+    explicit CallbackAggregatorOnThread(CompletionHandler<void()>&& callback)
         : m_callback(WTFMove(callback))
 #if ASSERT_ENABLED
         , m_wasConstructedOnMainThread(isMainThread())
@@ -58,6 +59,10 @@ private:
 #endif
 };
 
+using CallbackAggregator = CallbackAggregatorOnThread<DestructionThread::Any>;
+using MainRunLoopCallbackAggregator = CallbackAggregatorOnThread<DestructionThread::MainRunLoop>;
+
 } // namespace WTF
 
 using WTF::CallbackAggregator;
+using WTF::MainRunLoopCallbackAggregator;
